cambios al proyecto en su rama master

--- a/blog.html
+++ b/blog.html
@@ -6,5 +6,11 @@
     <body>
         <h1>Hey muy buenas a todos</h1>
         <p>estes es un parrafo</p>
+        <ul>
+            <li type="square"> <a href="https://www.rockstargames.com/sanandreas/">Grand theft auto San Andreas <small>(around ten times)</small> </a></li>
+            <li type="square"> Donde nomas tiras y pasas el balon <small>(no es fifa)</small></li>
+            <li type="square"> Burnout</li>
+            <li type="square"> Fifa <small>(jeje)</small></li>
+        </ul>
     </body>
 </html>
