se agrego el inicio de cabecera en la rama cabecera

--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,9 @@
         <link rel = "stylesheet" href="styles/estilos.css"/>
     </head>
     <body>
+        <div id ="cabecera">
+            cabecera
+        </div>
         <h1>Hey muy buenas a todos</h1>
         <p>estes es un parrafo</p>
         <ul>
