--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,7 @@
             <li type="square"> Donde nomas tiras y pasas el balon <small>(no es fifa)</small></li>
             <li type="square"> Burnout</li>
             <li type="square"> Fifa <small>(jeje)</small></li>
+            <li type "square"> GTA V yes bitch I've just done</li>
         </ul>
     </body>
 </html>
