Se agrego un parrafo en master

--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
     <body>
         <h1>Hey muy buenas a todos</h1>
         <p>estes es un parrafo</p>
+        <p> y vamos a exribir debajo del otro parrafo</p>
         <ul>
             <li type="square"> <a href="https://www.rockstargames.com/sanandreas/">Grand theft auto San Andreas <small>(around ten times)</small> </a></li>
             <li type="square"> Donde nomas tiras y pasas el balon <small>(no es fifa)</small></li>
